# epl_prediction

./: README.md  pyproject.toml
epl_prediction/data/: promoted_teams.csv
epl_prediction/src/: data_investigation.ipynb  feature_selection.ipynb  initial_models.ipynb
